fix for invisible buttons in IE.  CSS gradients don't work even in IE9, sheesh.

--- a/public/stylesheets/tasks.css
+++ b/public/stylesheets/tasks.css
@@ -297,6 +297,7 @@ p{margin:0 0 18px;}
 	display:block;
   height:18px;
   padding:7px 10px 8px 12px;
+  border-radius:10px;
   font:bold 15px/18px Arial, Helvetica, sans-serif;
 }
 
@@ -325,6 +326,9 @@ p{margin:0 0 18px;}
   background: -moz-linear-gradient(top, #785f86, #53385b);
   /* IE 10 */
   background: -ms-linear-gradient(top, #785f86, #53385b);
+  /* older IE */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#785f86', endColorstr='#53385b');
+
   /* Opera 11.10+ */
   background: -o-linear-gradient(top, #785f86, #53385b);
 }
